Optimization MangaController and UserController. Added MangaService. User can delete manga from him list. etc